# solvergen

./: .gitignore  CMakeLists.txt
docs/: grid_characteristic.nb
src/generator/: generator.cpp  generator.cpp.autosave
src/solverlib/: CMakeLists.txt  solverhelper.cpp  solverhelper.h
src/solvers/: fd_scalar_wave_2d.cpp  gc_elastic_2d.cpp  gc_elastic_2d_from_le2d.cpp
testscripts/: gc_elastic_2d_tiled.cpp  indexgen2d.cpp  indexgen2d_bounds.cpp  indexgen2d_final.cpp  indexgen2d_fixed_only.cpp  indexgen2d_templated.cpp  test.sh
